RemoteMacViews: Re-enable print menu item in PWA mode

Leave the "print using system dialog" item (which appears when
one presses option) disabled, because that interface appears in
the Chrome process (instead of the app process).

Bug: 913396
Change-Id: Ifd5715d68fbc532533834b869a1931ed3a48237d
Reviewed-on: https://chromium-review.googlesource.com/c/1371941
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615697}
Former-commit-id: 366ad8ea07e50ff199ceea5396066d7946c960c3