chrome/browser/ui/cocoa/main_menu_builder.mm
@@ -118,7 +118,7 @@ base::scoped_nsobject<NSMenuItem> BuildFileMenu(
                     .remove_if(is_pwa),
                 Item().is_separator().remove_if(is_pwa),
                 Item(IDS_SHARE_MAC).remove_if(is_pwa), Item().is_separator(),
-                Item(IDS_PRINT).command_id(IDC_PRINT).remove_if(is_pwa),
+                Item(IDS_PRINT).command_id(IDC_PRINT),
                 Item(IDS_PRINT_USING_SYSTEM_DIALOG_MAC)
                     .command_id(IDC_BASIC_PRINT)
                     .is_alternate()
